[package]
name = "stun-rs"
version = "0.1.0"
authors = ["zhxiaog <zhxiaog@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
tokio = { version = "0.2", features = ["full"] }
tokio-util = {version="0.3.1", features=["full"]}
futures = {version="0.3.5"}
clap = "2.33.1"
